<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_media"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/media_play_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/media_play_button"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="110dp"
            android:src="@drawable/youku" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/media_play_button"
            android:layout_below="@+id/media_play_button"
            android:layout_marginStart="92dp"
            android:layout_marginTop="40dp"
            android:text="@string/str_media_youku"
            android:textColor="@color/media_tv"
            android:textSize="30sp" />

    </RelativeLayout>

	<RelativeLayout
        android:id="@+id/radio_play_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1" >

		<ImageView
		    android:id="@+id/radio_play_button"
		    android:layout_width="240dp"
		    android:layout_height="240dp"
		    android:layout_alignParentTop="true"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="50dp"
		    android:src="@drawable/radio" />

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignStart="@+id/radio_play_button"
		    android:layout_below="@+id/radio_play_button"
		    android:layout_centerHorizontal="true"
		    android:layout_marginStart="60dp"
		    android:layout_marginTop="40dp"
		    android:text="@string/str_media_radio_list"
		    android:textColor="@color/media_tv"
		    android:textSize="30sp" />
        
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/video_play_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1" >
		
		<ImageView
            android:id="@+id/video_play_button"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/video" />

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignStart="@+id/video_play_button"
		    android:layout_below="@+id/video_play_button"
		    android:layout_marginStart="63dp"
		    android:layout_marginTop="40dp"
		    android:text="@string/str_media_video_list"
		    android:textColor="@color/media_tv"
		    android:textSize="30sp" />

    </RelativeLayout>
</LinearLayout>